--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 authors = ["Gus Caplan <me@gus.host>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
 irc = { git = "https://github.com/aatxe/irc", branch = "develop" }
 tokio-util = { version = "0.2", features = ["full"] }
 futures = "0.3"
-ruma-client = { version = "0.3", features = ["tls"] }
+hyper = "0.13"
+hyper-tls = "0.4"
+ruma-api = "0.13"
 ruma-client-api = "0.6"
+http = "0.2"
+url = "2.1.1"
