--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ hyper-tls = "0.4"
 ruma-api = "0.13"
 ruma-client-api = "0.6"
 http = "0.2"
-url = "2.1.1"
+url = "2.1"
+tide = "0.6.0"
+serde = "1.0.104"
